plugins {
    id 'java-library'
    id 'maven-publish'
    id 'groovy'
    id 'application'
    id 'org.flywaydb.flyway' version '7.15.0'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'war'
}

war {
    archiveBaseName = 'Linketinder-Backend'
    version = '1.0-SNAPSHOT'
}

flyway {
    driver = 'org.postgresql.Driver'
    url = 'jdbc:postgresql://localhost:5432/postgres'
    user = 'mateus'
    password = 'gringo'
    schemas = ['flyway']
    defaultSchema = 'flyway'
}

application {
    mainClass = 'app.Main'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

sourceSets {
    test {
        resources.srcDirs("src/test/groovy")
    }
}

test {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencies {
    api libs.org.apache.groovy.groovy.all
    api libs.org.postgresql.postgresql
    api libs.org.apache.groovy.groovy.sql

    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'

    compileOnly 'jakarta.platform:jakarta.jakartaee-api:10.0.0'


    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core:7.15.0'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.springframework:spring-core:6.1.12'
    implementation 'org.springframework:spring-web:6.1.12'
    implementation 'org.springframework:spring-context:6.1.12'
    implementation 'org.springframework:spring-beans:6.1.12'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.5'
    implementation 'org.springframework:spring-webmvc:6.1.12'
    implementation 'org.springframework.boot:spring-boot-autoconfigure:3.3.3'


    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
    testImplementation 'org.spockframework:spock-junit4:2.3-groovy-4.0'

    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
    providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

group = 'org.example'
version = '1.0-SNAPSHOT'
description = 'Linketinder-Backend'
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}



tasks.named('test', Test) {
    useJUnitPlatform()
    maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}
